Add references to projects

--- a/ServiceRadar.Infrastructure/ServiceRadar.Infrastructure.csproj
+++ b/ServiceRadar.Infrastructure/ServiceRadar.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceRadar.Application\ServiceRadar.Application.csproj" />
+  </ItemGroup>
+
 </Project>
