--- a/ServiceRadar.MVC/ServiceRadar.MVC.csproj
+++ b/ServiceRadar.MVC/ServiceRadar.MVC.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ServiceRadar.Application\ServiceRadar.Application.csproj" />
     <ProjectReference Include="..\ServiceRadar.Infrastructure\ServiceRadar.Infrastructure.csproj" />
   </ItemGroup>
