--- a/ServiceRadar.Application/ServiceRadar.Application.csproj
+++ b/ServiceRadar.Application/ServiceRadar.Application.csproj
@@ -17,4 +17,9 @@
     <ProjectReference Include="..\ServiceRadar.Domain\ServiceRadar.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="WorkshopServices\Commands\" />
+    <Folder Include="WorkshopServices\Queries\" />
+  </ItemGroup>
+
 </Project>
